@@ -12,10 +12,10 @@
 debug=on
 
 # the default bytecode version
-targetJvm=1.5
+targetJvm=1.7
 
 # svnant version
-svnant.version=1.4dev
+svnant.version=1.4-1.8.11-sf
 
 # encoding of the sources
 encoding=ISO-8859-1
