@@ -9,15 +9,15 @@
     </library>
     <library name="svnclientadapter" systemlibrary="false">
         <archive path="/svnant/lib/svnclientadapter/lib/antlr-runtime-3.4.jar"/>
-        <archive path="/svnant/lib/svnclientadapter/lib/jna-3.4.0.jar"/>
-        <archive path="/svnant/lib/svnclientadapter/lib/sequence-library-1.0.2.jar"/>
-        <archive path="/svnant/lib/svnclientadapter/lib/sqljet-1.1.4.jar"/>
+        <archive path="/svnant/lib/svnclientadapter/lib/jna-4.1.0.jar"/>
+        <archive path="/svnant/lib/svnclientadapter/lib/sequence-library-1.0.3.jar"/>
+        <archive path="/svnant/lib/svnclientadapter/lib/sqljet-1.1.10.jar"/>
         <archive path="/svnant/lib/svnclientadapter/lib/svn-javahl.jar"/>
-        <archive path="/svnant/lib/svnclientadapter/lib/svnClientAdapter.jar"/>
-        <archive path="/svnant/lib/svnclientadapter/lib/svnkit-1.7.5-v1.jar"/>
-        <archive path="/svnant/lib/svnclientadapter/lib/svnkit-cli-1.7.5-v1.jar"/>
-        <archive path="/svnant/lib/svnclientadapter/lib/svnkit-javahl16-1.7.5-v1.jar"/>
-        <archive path="/svnant/lib/svnclientadapter/lib/trilead-ssh2-1.0.0-build215.jar"/>
+        <archive path="/svnant/lib/svnclientadapter/lib/svnClientAdapter-1.7.0-1.8.11-sf.jar"/>
+        <archive path="/svnant/lib/svnclientadapter/lib/svnkit-1.8.11.jar"/>
+        <archive path="/svnant/lib/svnclientadapter/lib/svnkit-cli-1.8.11.jar"/>
+        <archive path="/svnant/lib/svnclientadapter/lib/svnkit-javahl16-1.8.11.jar"/>
+        <archive path="/svnant/lib/svnclientadapter/lib/trilead-ssh2-1.0.0-build220.jar"/>
     </library>
     <library name="xincluder" systemlibrary="false">
         <archive path="/svnant/lib/xincluder/xincluder.jar" source="/svnant/lib/xincluder/src.zip"/>
