@@ -1,3 +1,11 @@
+* Dec 9, 20155
+- Forked to https://github.com/patricematignon/subclipse
+- Adjusted dependencies against svnKit 1.8.11
+- Built against ant 1.8.4 and not tested with anythign else
+- Ignored JavaHL (not tested)
+- Adjusted against svnClient adapter v. 1.7.0-1.8.11
+
+
 * 1.4 (28.12.2011) ** UNRELEASED **
 - Build against svnClientAdapter 0.9.102, Subversion XXX, SVNKit 1.3.x
 - JUnit framework has been updated to version 4.10
